
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ DWORD ;


 scalar_t__ EnumPrintersW (int ,int *,int,int *,int ,scalar_t__*,scalar_t__*) ;
 scalar_t__ GetLastError () ;
 int PRINTER_ENUM_NAME ;
 int exit (int) ;
 int printf (char*,scalar_t__) ;

int testPrinters(void) {
   DWORD size,ret,err;
   ret=EnumPrintersW ( PRINTER_ENUM_NAME, ((void*)0), 1, ((void*)0), 0, &size, &size );
      if ( ret==0 ) {
         err=GetLastError();
         if (err!=122) {
            printf("[-] Printer Service not available - Error: %d\n",err );
            exit(-1);
         }
      }
      return(1);
}
