; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_3204.c_testPrinters.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_3204.c_testPrinters.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PRINTER_ENUM_NAME = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [47 x i8] c"[-] Printer Service not available - Error: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @testPrinters() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = load i32, i32* @PRINTER_ENUM_NAME, align 4
  %5 = call i64 @EnumPrintersW(i32 %4, i32* null, i32 1, i32* null, i32 0, i64* %1, i64* %1)
  store i64 %5, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %17

8:                                                ; preds = %0
  %9 = call i64 (...) @GetLastError()
  store i64 %9, i64* %3, align 8
  %10 = load i64, i64* %3, align 8
  %11 = icmp ne i64 %10, 122
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @printf(i8* getelementptr inbounds ([47 x i8], [47 x i8]* @.str, i64 0, i64 0), i64 %13)
  %15 = call i32 @exit(i32 -1) #3
  unreachable

16:                                               ; preds = %8
  br label %17

17:                                               ; preds = %16, %0
  ret i32 1
}

declare dso_local i64 @EnumPrintersW(i32, i32*, i32, i32*, i32, i64*, i64*) #1

declare dso_local i64 @GetLastError(...) #1

declare dso_local i32 @printf(i8*, i64) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
